* fixed flicker in timer initialiation and refactored script
 * replaced innerHtml with textContent

--- a/styles/ad-countdown-timer.css
+++ b/styles/ad-countdown-timer.css
@@ -1,5 +1,6 @@
 .ad-countdown-timer {
-    background-image: url("/assets/images/ad-block-background.png");
+    visibility: hidden;
+    background-image: url("/assets/images/ad-countdown-timer-background.svg");
     width: 100%;
     height: 436px;
     display: flex;
