--- a/styles/global.css
+++ b/styles/global.css
@@ -18,6 +18,7 @@
     --color-blue: #5AB0FF;
     --color-light-blue: #00C6DF;
     --color-dark-blue: #0278ED;
+    --text-color-primary: #222222;
     --text-color-white: #FFFFFF;
     --text-color-gray: #666666;
 }
